actualización páginas principales

--- a/terapia.html
+++ b/terapia.html
@@ -122,16 +122,18 @@
                 <h3>Desarrollo y seguimiento</h3>
                 <p>Sesiones regulares con seguimiento continuo. Informes periódicos para  las familias y un informe global final con recomendaciones para  continuar el progreso.</p>
             </article>
+            <img src="media/terapia/progTera.jpeg" alt="Niños en caballos">
         </section>
         <section class="voluntariado">
             <article>
-                <h4>Participa</h4>
-                <h2>voluntariado</h2>
+                <h4 class="iniciador">Participa</h4>
+                <h2>Voluntariado</h2>
                 <p>¿Te gustan los caballos y trabajar con personas con discapacidad?</p>
                 <p>En el Centro ecuestre Yeguada carmen Mártinez buscamos voluntarios para realizar las terapias ecuestres. </p>
                 <p>Lugar: Carretera A- 440 KM 7 Fuente Palmera Córdoba</p>
                 <p>Para más información enviar cv: info@yeguadacarmenmartinez.com</p>
             </article>
+            <img src="media/terapia/voluntarios.png" alt="">
         </section>
     </main>
     <div id="footer"></div>
